# agentic-rag-ecommerce

./: .gitignore  README.md  agent.py  eval_retrieval.py  graph.py  ingest.py  main.py  pyproject.toml
data/: examples.parquet  products.parquet
